--- a/frontend/visualizer/package.json
+++ b/frontend/visualizer/package.json
@@ -8,6 +8,7 @@
     "@faker-js/faker": "^6.1.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
+    "axios": "^0.26.1",
     "d3-scale": "^4.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -39,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
